--- a/partials/header.html
+++ b/partials/header.html
@@ -6,9 +6,10 @@
 
     <!-- Navigation -->
     <nav class="hidden md:flex space-x-6">
+  
       <a href="#" class="hover:text-yellow-300">Offres compatibles</a>
       <a href="#" class="hover:text-yellow-300">Profil & Expérience</a>
-      <a href="#" class="hover:text-yellow-300">Équilibre Travail</a>
+      <a href="Mes parcours academique.html" class="hover:text-yellow-300">Créer Votre CV</a>
     </nav>
 
     <!-- Login -->
