--- a/partials/header.html
+++ b/partials/header.html
@@ -9,7 +9,7 @@
     <!-- Navigation -->
     <nav class="hidden md:flex space-x-6">
   
-      <a href="#" class="hover:text-yellow-300">Offres compatibles</a>
+      <a href="jobs.html" class="hover:text-yellow-300">Offres compatibles</a>
       <a href="/aminepages/profilepage.html" class="hover:text-yellow-300">Profil & Expérience</a>
       <a href="Mes parcours academique.html" class="hover:text-yellow-300">Créer Votre CV</a>
     </nav>
