final push on vercel test

--- a/partials/header.html
+++ b/partials/header.html
@@ -10,7 +10,7 @@
     <nav class="hidden md:flex space-x-6">
   
       <a href="jobs.html" class="hover:text-yellow-300">Offres compatibles</a>
-      <a href="/aminepages/profilepage.html" class="hover:text-yellow-300">Profil & Expérience</a>
+      <a href="profilepage.html" class="hover:text-yellow-300">Profil & Expérience</a>
       <a href="Mes parcours academique.html" class="hover:text-yellow-300">Créer Votre CV</a>
     </nav>
 
